fixed bulma problem with overflowy

--- a/css/bulma.css
+++ b/css/bulma.css
@@ -5241,7 +5241,7 @@
     flex-direction: column;
     max-height: calc(100vh - 40px);
     overflow: hidden;
-    -ms-overflow-y: visible;
+   
   }
   
   .modal-card-head,
